Dec 10th, 2005: Alex Burger <alex_b@users.sourceforge.net>
- Changed 'sub match' to only do variable substitution if needed.

Nov 22nd, 2005: Alex Burger <alex_b@users.sourceforge.net>
- MATCH statement now accepts any variable name instead of only
  enterprise variables.  Example: MATCH $s:(Normal)

Nov 5th, 2005: Alex Burger <alex_b@users.sourceforge.net>
- Added NODES MODE= snmptt.conf file option to allow you to 
  select either POS (positive - the default) or NEG (negative)
  for NODES matches.  If set to NEG, then the NODES is a 'match'
  only if NONE of the NODES entries match.  POS = x | x | x etc.
  NEG = !x & !x & !x etc.
- Fixed bug in NODES where NODES entries from previous EVENTs
  was not being purged correctly.
- Changed version to snmptt_1.1beta2

Nov 5th, 2005: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to snmptt_1.1beta1
- Changed MySQL INSERT statements to PREPARE / EXECUTE as it is
  safer than trying to escape all the fields manually.  This way
  all escaping is done via the MySQL Perl module.

Nov 2nd, 2005: Alex Burger <alex_b@users.sourceforge.net>
- Added PREEXEC snmptt.conf file option to allow an external 
  program to be run before processing the FORMAT and EXEC lines.
  The output of the external program is stored in the $pn variable
  where n is a number starting from 1.  Multiple PREEXEC lines
  are permitted.  The first PREEXEC stores the result of the
  command in $p1, the second in $p2 etc.  Any ending newlines
  are removed.  The snmptt.ini parameter pre_exec_enable can be used
  to enable / disable it.
- If the debug log file can not be opened, a message is now logged
  to syslog if syslog_system_enable is enabled, and to the 
  Event Log if eventlog_system_enable is enabled.
- Fixed a problem when --format_desc=n was used. It was adding a 
  trailing whitespace for every non existant line in the description.
  Thanks to Carlos Velasco for the fix.
- Added unknown_trap_exec snmptt.ini option.  If defined, the 