@@ -12,7 +12,7 @@
 <title>SNMP Trap Translator</title>
 </head>
 <body>
-<h1><b>SNMP Trap Translator Convert MIB v1.1beta1</b></h1>
+<h1><b>SNMP Trap Translator Convert MIB v1.1beta2</b></h1>
 <b>(</b><a href=
 "http://www.snmptt.org"><b>SNMPTTCONVERTMIB</b></a><b>)</b><br />
 This file was last updated on:&nbsp; November 5th, 2005
