@@ -1,6 +1,6 @@
 #!/usr/bin/perl
 #
-# SNMPTTCONVERT v1.1beta1
+# SNMPTTCONVERT v1.1beta2
 #
 # Copyright 2002-2005 Alex Burger
 # alex_b@users.sourceforge.net
